Renamed defaults directory to automk.

--- a/automk/Makefile
+++ b/automk/Makefile
@@ -3,5 +3,5 @@ _BUILDIR_ := $(_SRCDIR_)/.build
 SUBPATH := .
 export _SRCDIR_ _BUILDIR_ SUBPATH
 
-include $(_SRCDIR_)/defaults/default.mk
+include $(_SRCDIR_)/automk/default.mk
 
